# gitlocalstats

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
.github/: FUNDING.yml
.github/workflows/: release-binaries.yml
scan/: scan.go
src/: main.rs  scanner.rs  stats.rs  ui.rs
stats/: stats.go
tests/: integration_tests.rs
