[package]
name = "gitlocalstats"
version = "0.1.2"
edition = "2024"
authors = ["Johannes Naylor <jonaylor89@gmail.com>"]
license = "MIT"
description = "A high-performance local contribution graph for Git and Jujutsu (jj)"
keywords = ["git", "jujutsu", "vcs", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/jonaylor89/gitlocalstats"
readme = "README.md"
default-run = "gitlocalstats"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
dotenvy = "0.15.7"
gix = "0.77.0"
ignore = "0.4.25"
num_cpus = "1.17.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"
